# near-critical-systems

./: .gitignore  MANIFEST.sha256  PUSH_TO_ANONYMOUS_GITHUB.md  README.md  REPOSITORY_CONTENTS.md  bats.bat  login_anonymous_github.bat  prepare_anonymous_repo.bat  pyproject.toml  requirements.txt  safe_init_commit_push_anonymous.bat
docs/: REPRODUCIBILITY.md  RESULTS.md  UPLOAD_TO_EXISTING_REPO_ANON_REVIEW.md  calibration_lineage.md
docs/theory/: near_critical_framework.md
results/beta_calibration/: beta_fit_n15000_T300000.json  beta_points_n15000_T300000.csv  console_output_n15000_T300000.txt  summary_n15000_T300000.json
results/paper_tables/: diagnostic_hazard_paper.csv  diagnostic_hazard_summary_paper.json  exp_cost_ratio_paper.csv  exp_heatmap_paper.csv  exp_misspecification_paper.csv  exp_smax_paper.csv  exp_smax_summary_paper.csv  lemma1_audit_paper.csv
scripts/: diagnose_beta_errors.py  run_all.py  run_all_paper.py  run_beta_definitive_jupyter.py  run_beta_intermediate.py  run_phase_1.py  run_phase_2.py  run_phase_3.py  run_phase_4.py  run_phase_4_paper.py  smoke_test.py  verify_definitive_results.py
src/buffer_policy/: __init__.py  age_based.py  experiments.py  experiments_paper.py  hazard.py  ig_beta.py  ig_beta_paper.py  io_utils.py  kernel.py  mdp.py  params.py  plots.py  poisson_utils.py  simulation.py  survival.py  validation.py
tests/: conftest.py  test_beta.py  test_hazard.py  test_kernel.py  test_mdp.py  test_paper_grids.py  test_poisson.py  test_reproducibility.py  test_simulation.py  test_survival_agebased.py  test_validation.py
