[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buffer_policy"
version = "0.1.0"
description = "Reliability-based threshold control and corrected first-passage dynamics for near-critical capacity-constrained systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Anonymous"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "numba>=0.58",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: slow integration/reproduction tests",
]
